--- a/appengine/hello_world/stg/app.yaml
+++ b/appengine/hello_world/stg/app.yaml
@@ -16,6 +16,8 @@
 runtime: ruby
 env: flex
 entrypoint: bundle exec ruby app.rb
+env_variables:
+  STAGE: staging
 
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
