--- a/appengine/hello_world/prod/app.yaml
+++ b/appengine/hello_world/prod/app.yaml
@@ -12,10 +12,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# [START gae_flex_quickstart]
-require "sinatra"
+# [START gae_flex_quickstart_yaml]
+runtime: ruby
+env: flex
+entrypoint: bundle exec ruby app.rb
+env_variables:
+  STAGE: production
 
-get "/" do
-  "Hello world from #{ENV['STAGE']}"
-end
-# [END gae_flex_quickstart]
+# This sample incurs costs to run on the App Engine flexible environment.
+# The settings below are to reduce costs during testing and are not appropriate
+# for production use. For more information, see:
+# https://cloud.google.com/appengine/docs/flexible/ruby/configuring-your-app-with-app-yaml
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
+
+# [END gae_flex_quickstart_yaml]
