--- a/appengine/hello_world/stg.yaml
+++ b/appengine/hello_world/stg.yaml
@@ -13,11 +13,12 @@
 # limitations under the License.
 
 # [START gae_flex_quickstart_yaml]
-runtime: ruby
+runtime: custom
+service: stg
 env: flex
-entrypoint: bundle exec ruby app.rb
+# entrypoint: bundle exec ruby app.rb
 env_variables:
-  STAGE: staging
+  STAGE: stg
 
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
